Update from black to aqua

--- a/Lab01MaterialP1/css/logo.css
+++ b/Lab01MaterialP1/css/logo.css
@@ -5,6 +5,7 @@
 div.table {
     border-collapse:collapse;
     margin:20%;
+    
 }
 
 div.row{
@@ -19,7 +20,7 @@ div.cell{
 }
 /* PH logo setting */
 div.honver{
-           background: Black;
+           background: aqua;
            display: block;
            padding: 5px;
        }
