Revert "Update from black to aqua"
This reverts commit a1ae29043a7034ef8aa51c81a7acea0ded9f8402.

--- a/Lab01MaterialP1/css/logo.css
+++ b/Lab01MaterialP1/css/logo.css
@@ -5,7 +5,6 @@
 div.table {
     border-collapse:collapse;
     margin:20%;
-    
 }
 
 div.row{
@@ -20,7 +19,7 @@ div.cell{
 }
 /* PH logo setting */
 div.honver{
-           background: aqua;
+           background: Black;
            display: block;
            padding: 5px;
        }
